# fodejas

./: .editorconfig  .env.development.example  .env.example  .env.production.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  project.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  code-quality.yml  deploy-production.yml  deploy-staging.yml  docker-build.yml
.kilocode/workflows/: opsx-bulk-archive.md  opsx-continue.md  opsx-ff.md  opsx-new.md  opsx-onboard.md  opsx-verify.md
apps/academic_tracking/: apps.py
apps/claims/: apps.py
apps/condonation/: apps.py
apps/convocatories/: apps.py
apps/core/: celery_metrics.py  health.py  logging_config.py  metrics.py  middleware.py  secrets.py
apps/core/tests/: test_secrets.py
apps/governance/: apps.py
apps/legalization/: apps.py
apps/psychosocial/: apps.py
apps/treasury/: apps.py
config/: settings.py  urls.py
docker/: Dockerfile  docker-compose.override.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  pgbouncer.ini  pgbouncer_userlist.txt  postgres.conf  queries.yaml  wait-for-services.sh
docker/backup-metrics/: backup-metrics.sh  crontab
docker/grafana/dashboards/: postgresql.json
docker/prometheus/: alerts.yml  prometheus.yml
openspec/changes/inf-001-repo-bootstrap/: proposal.md  tasks.md
openspec/changes/inf-002-local-dev-env/: proposal.md
openspec/changes/inf-003-cicd/: design.md  proposal.md  tasks.md
scripts/: create_venv.sh  dev.sh  setup.sh  wait_for_services.sh
scripts/backup/: backup_verify.sh  base_backup.sh  monitoring.sql  wal_archive.sh
(+30 files in other folders)
