[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fodejas"
version = "0.1.0"
description = "FODEJAS - Fondo para el Desarrollo Educativo de los Jóvenes del Archipiélago"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2",
    "djangorestframework>=3.14",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "celery>=5.3",
    "django-celery-beat>=2.5",
    "boto3>=1.28",
    "django-storages>=1.14",
    "weasyprint>=60.0",
    "django-htmx>=1.17",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.1.0",
    "isort>=5.12",
    "pytest>=7.4",
    "pytest-django>=4.7",
    "factory-boy>=3.3",
    "pre-commit>=3.5",
    "detect-secrets>=1.4",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | \.tox
    | build
    | dist
    | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["apps"]
skip = [".venv", ".tox", "build", "dist"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
testpaths = ["apps"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*"]
